// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordConfirm /> rendering should render correctly 1`] = `
<div
  className="container content"
  id="password-confirm"
>
  <div
    className="inner"
  >
    <form
      className="main-column"
      onSubmit={[Function]}
    >
      <h1>
        Reset your password
      </h1>
      <p>
        Please enter your new password below.
      </p>
      <div
        className="fieldset"
      >
        <div
          className="row password"
        >
          <label
            htmlFor="password"
          >
            password
          </label>
          <input
            autoComplete="new-password"
            className="input "
            id="password"
            name="newPassword1"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="password"
            required={true}
            title="password must be a minimum of 6 characters"
            type="password"
            value=""
          />
          <div
            className=""
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <i
              className="eye"
              title="reveal password"
            />
          </div>
        </div>
        <div
          className="row password-confirm"
        >
          <label
            htmlFor="password-confirm"
          >
            confirm password
          </label>
          <input
            autoComplete="new-password"
            className="input "
            id="password-confirm"
            name="newPassword2"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="confirm password"
            required={true}
            title="password must be a minimum of 6 characters"
            type="password"
            value=""
          />
          <div
            className=""
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <i
              className="eye"
              title="reveal password"
            />
          </div>
        </div>
      </div>
      <div
        className="row submit"
      >
        <input
          className="button full"
          type="submit"
          value="Change password"
        />
      </div>
      <div
        className="contact-us"
      >
        Please contact us if you have any trouble resetting your password.
      </div>
      <a
        className="link"
        href="/default/login"
        onClick={[Function]}
      >
        Go back to sign in
      </a>
    </form>
    <div
      className="side-column contact"
    >
      <div
        className="inner"
      >
        <div
          className="row"
        >
          <span
            className="label"
          >
            E-mail
            :
          </span>
          <a
            className="link"
            href="mailto:support@openwisp.co"
          >
            support@openwisp.co
          </a>
        </div>
        <div
          className="row"
        >
          <span
            className="label"
          >
            Helpdesk
            :
          </span>
          <a
            className="link"
            href="tel:+789 948 564"
          >
            +789 948 564
          </a>
        </div>
        <div
          className="contact-links"
        >
          <a
            className="link "
            href="https://twitter.com/openwisp"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="twitter"
              className="contact-image "
              src="/assets/default/twitter.svg"
            />
          </a>
          <a
            className="link "
            href="https://facebook.com/openwisp"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="facebook"
              className="contact-image "
              src="/assets/default/facebook.svg"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PasswordConfirm /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div
  className="container content"
  id="password-confirm"
>
  <div
    className="inner"
  >
    <form
      className="main-column"
      onSubmit={[Function]}
    >
      <h1>
        PASSWORD_CONFIRM_HEADING
      </h1>
      <p>
        PASSWORD_CONFIRM_ADDITIONAL_TEXT
      </p>
      <div
        className="fieldset"
      >
        <div
          className="row password"
        >
          <label
            htmlFor="password"
          >
            PASSWORD_LABEL
          </label>
          <input
            className="input "
            id="password"
            name="newPassword1"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="PASSWORD_PLACEHOLDER"
            required={true}
            title="PASSWORD_PATTERN_DESCRIPTION"
            type="password"
            value=""
          />
          <PasswordToggleIcon
            inputRef={
              Object {
                "current": null,
              }
            }
            isVisible={false}
            parentClassName=""
          />
        </div>
        <div
          className="row password-confirm"
        >
          <label
            htmlFor="password-confirm"
          >
            CONFIRM_PASSWORD_LABEL
          </label>
          <input
            className="input "
            id="password-confirm"
            name="newPassword2"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="CONFIRM_PASSWORD_PLACEHOLDER"
            required={true}
            title="CONFIRM_PASSWORD_PATTERN_DESCRIPTION"
            type="password"
            value=""
          />
          <PasswordToggleIcon
            inputRef={
              Object {
                "current": null,
              }
            }
            isVisible={false}
            parentClassName=""
          />
        </div>
      </div>
      <div
        className="row submit"
      >
        <input
          className="button full"
          type="submit"
          value="PASSWORD_CONFIRM_BUTTON"
        />
      </div>
      <div
        className="contact-us"
      >
        PASSWORD_CONFIRM_CONTACT_TEXT
      </div>
      <Link
        className="link"
        to="/default/login"
      >
        LOGIN_PAGE_LINK_TEXT
      </Link>
    </form>
    <Connect(Contact) />
  </div>
</div>
`;
